# fastapi_project

./: .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  main.py  pyproject.toml  render.yaml  requirements.txt
alembic/: env.py
api/: __init__.py  routes.py  user.py
core/: cache.py  config.py  database.py  models.py  schemas.py  tasks.py  users.py
core/models/: base.py  db_helper.py  link.py  user.py
core/schemas/: user.py
